tests/errors/surf_cont_14.ki
# string indexed by a Float instead of an Integer
var s = "hello"
discard s[2.5]
